This this the changelog file for the SdrBirdrec project.

Release 0.69.4 (pending)
==========================

- log backpressure for NIDAQmxSourceActivity 

Release 0.69.3 (27.05.2019)
==========================

- add support for wav and rf64 dataformat

Release 0.69.2 (26.05.2019)
==========================

- remove cout redirection 

Release 0.69.1 (24.05.2019)
==========================

- start split files numbering at 1 instead of 0
- fix noise level calculation bug (could result in crash)

Release 0.69.0 (22.05.2019)
==========================

- print recording start- and endtime into logfile
- print SdrBirdrec version number into logfile
- fix split files naming bug
- change name format for split files option
- signal_strengths relative to noise level (noise level is estimated as low-pass filtered median of the spectrogram)